--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -32,6 +32,8 @@ jobs:
         with:
           title: Release apps
           commit: Release apps
+          publish: pnpm ci:publish
+          createGithubReleases: true
         env:
           # Use private access token so Github can trigger another workflow from this one
           GITHUB_TOKEN: ${{ secrets.PAT }}
