--- a/apps/monitoring/package.json
+++ b/apps/monitoring/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "lint:fix": "eslint --fix .",
     "generate": "graphql-codegen",
-    "test": "vitest"
+    "test": "vitest",
+    "ci:publish": "echo \"publishing monitoring...\""
   },
   "saleor": {
     "schemaVersion": "3.10"
