--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -19,8 +19,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+      - name: Get tags
+        run: git fetch --tags origin
       - name: Setup Node.js 16 # It was default for Changesets action, check if it can be bumped to v18
         uses: actions/setup-node@v3
         with:
