--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           title: Release apps
           commit: Release apps
-          publish: pnpm ci:publish
+          publish: pnpm github:release
           createGithubReleases: true
         env:
           # Use private access token so Github can trigger another workflow from this one
