--- a/.github/workflows/assign-pr.yml
+++ b/.github/workflows/assign-pr.yml
@@ -9,9 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Assign PR to creator
-      run: gh pr --repo $REPOSITORY edit $PR_NUMBER --add-assignee $CREATOR
+      run: gh pr --repo $REPOSITORY edit $PR_URL --add-assignee $CREATOR
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         REPOSITORY: ${{ github.repository }}
+        PR_URL: ${{github.event.pull_request.html_url}}
         PR_NUMBER: $${{ github.event.pull_request.number }}
         CREATOR: ${{ github.event.pull_request.user.login }}
