--- a/.github/workflows/assign-pr.yml
+++ b/.github/workflows/assign-pr.yml
@@ -6,11 +6,10 @@ on:
 
 jobs:
   assign_creator:
+    if: ${{ github.event.pull_request.user.login != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     steps:
     - name: Assign PR to creator
-      run: gh pr edit $PR_URL --add-assignee $CREATOR
+      run: gh pr edit "${{ github.event.pull_request.html_url }}" --add-assignee "${{ github.event.pull_request.user.login }}"
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PR_URL: ${{github.event.pull_request.html_url}}
-        CREATOR: ${{ github.event.pull_request.user.login }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
