--- a/.github/workflows/assign-pr.yml
+++ b/.github/workflows/assign-pr.yml
@@ -2,16 +2,13 @@ name: Assign PR to creator
 
 on:
   pull_request:
-    types: [opened]
+    # types: [opened]
 
 jobs:
   assign_creator:
-    if: ${{ github.event.pull_request.user.login != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     steps:
     - name: Assign PR to creator
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PR_URL: ${{ github.event.pull_request.html_url }}
-        CREATOR: ${{ github.event.pull_request.user.login }}
-      run: gh pr edit "$PR_URL" --add-assignee "$CREATOR"
+      uses: thomaseizinger/assign-pr-creator-action@vd7f25d4e70a3f34aaccb7bae2b316adeb46459c7
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
